--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,14 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+
 :root {
-  --background: #ffffff;
+  --background: #041E23;
   --foreground: #171717;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #041E23;
     --foreground: #ededed;
   }
 }
